[package]
name = "rusty-web-server"
version = "0.1.0"
authors = ["phideg <deglerp@googlemail.com>"]
license = "MIT/Apache-2.0"
description = "A basic WEB file server based on minihttp"

[[bin]]
name = "rusty-web-server"

[dependencies]
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
tokio-service = "0.1"
tokio-proto = "0.1"
futures = "0.1"
num_cpus = "1.3"
clap = "2.23"
mime_guess = "1.8"
url = "1.4"